Enhance environment configuration and user management features
- Updated .env.example to include new configuration options for allowed origins, CSRF, and logging
- Refactored CORS settings in index.js to utilize the new ALLOWED_ORIGINS variable
- Improved user login functionality by integrating two-factor authentication middleware in router.js
- Added new user update and update-password routes with validation and two-factor checks
- Cleaned up logger configuration to remove environment dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,30 @@
 PORT=8100
-JWT_SECRET=""
-JWT_ALGORITHM="HS256"
+
 NODE_ENV="development"
 BOT_PROTECT="true"
+TRUST_PROXY=""
+
+ALLOWED_ORIGINS="http://localhost:8100,http://localhost:8101"
+
+CSRF_SECRET=""
+COOKIE_SECRET=""
+
+JSON_LIMIT="10mb"
+URL_ENCODED_LIMIT="10mb"
+
+# JWT
+JWT_SECRET=""
+JWT_ALGORITHM="HS256"
+JWT_ISSUER=""
+JWT_AUDIENCE=""
 
 # DB
 DB_MODE="NORMAL" # OFF/NORMAL/FULL/EXTRA
 
 # Logger
+LOG_LEVEL="info"
 ENCRYPT_LOGS="false"
+LOG_ENCRYPTION_KEY=""
 
 # 2FA
 2FA_enabled="true"
